--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_CONNECTION_URL=mongodb+srv://nAzdAc:nAzdAc1996@cluster0.xyvjq.mongodb.net/app?retryWrites=true&w=majority
+MONGO_CONNECTION_URL=mongodb+srv://nAzdAc:nAzdAc1996@cluster0.vwb03.mongodb.net/travel-app?retryWrites=true&w=majority
