--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "cheerio": "^1.0.0-rc.5",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
+    "pexels": "^1.0.1",
     "shortid": "^2.2.16",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
