--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cheerio": "^1.0.0-rc.5",
+    "cloudinary": "^1.25.0",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pexels": "^1.0.1",
     "shortid": "^2.2.16",
     "swagger-ui-express": "^4.1.6",
